fix: pinned message icon size is too small

--- a/src/components/chat-flow/pinned-message/index.scss
+++ b/src/components/chat-flow/pinned-message/index.scss
@@ -8,7 +8,7 @@
 
 .icon {
     /* stylelint-disable-next-line declaration-no-important */
-    width: 0.5em !important;
+    width: 1em !important;
     height: 0.5em;
     padding-right: 10px;
     padding-left: 10px;
